Prepare CI build #3

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,7 @@ configure_manifest(${manifest} _new_manifest)
 # here.
 #
 include(Targets)
-create_targets(${_new_manifest})
+#create_targets(${_new_manifest})
 
 if ("${BUILD_TYPE}" STREQUAL "")
   return ()
