--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,15 +68,15 @@ endif ()
 file(
   GLOB manifest ${PROJECT_SOURCE_DIR}/flatpak/org.opencpn.OpenCPN.Plugin.*.yaml
 )
-#include(ConfigureManifest)
-#configure_manifest(${manifest} _new_manifest)
+include(ConfigureManifest)
+configure_manifest(${manifest} _new_manifest)
 
 # Set up targets. Targets sets up new targets with BUILD_TYPE set to
 # 'flatpak', 'android' or 'tarball'. The initial call without BUILD_TYPE ends
 # here.
 #
 include(Targets)
-#create_targets(${_new_manifest})
+create_targets(${_new_manifest})
 
 if ("${BUILD_TYPE}" STREQUAL "")
   return ()
