Prepare CI build #22

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -88,6 +88,7 @@ if (NOT ${BUILD_TYPE} STREQUAL "flatpak")
   include(PluginInstall)
   if (QT_ANDROID)
     include(AndroidLibs)
+    include_directories(${CMAKE_SOURCE_DIR})
   else ()
     include(PluginLibs)
   endif ()
