--- a/build-deps/control
+++ b/build-deps/control
@@ -6,11 +6,13 @@ Build-Depends: debhelper (>= 9),
  libjsoncpp-dev,
  libtinyxml-dev,
  libunarr-dev | base-files (<< 11),
- libwxgtk3.0-dev | libwxgtk3.0-gtk3-dev,
- libwxgtk3.0-0v5 | libwxgtk3.0-0 | libwxgtk3.0-gtk3-0v5,
- libwxgtk3.0-gtk3-dev | base-files (<< 10),
- libwxgtk-webview3.0-dev | libwxgtk-webview3.0-gtk3-dev | base-files (<< 11),
  libwxsvg-dev | base-files (<< 11),
+ base-files (>=12) | libwxgtk3.0-gtk3-dev,
+ base-files (>=12) | libwxgtk3.0-gtk3-0v5,
+ base-files (>=12) | libwxgtk-webview3.0-gtk3-dev,
+ base-files (<< 12) | libwxgtk3.2-dev,
+ base-files (<< 12) | libwxgtk-webview3.2-dev,
+
  libcurl4-openssl-dev,
  python3-pip,
  python3-setuptools,
