--- a/build-deps/control
+++ b/build-deps/control
@@ -2,17 +2,18 @@ Source: opencpn
 Build-Depends: debhelper (>= 9),
  base-files (>>8) | mesa-common-dev,
  base-files (>>8) | libgl1-mesa-dev,
+ git,
  libgtk2.0-dev,
  libjsoncpp-dev,
  libtinyxml-dev,
  libunarr-dev | base-files (<< 11),
+ base-files (>=11) | libwxgtk3.0-dev,
+ base-files (>=11) | libwxgtk3.0-0v5 | libwxgtk3.0-0,
+ base-files (>=10) | libwxgtk-webview3.0-dev,
+ base-files (<< 10) | libwxgtk3.2-dev | libwxgtk3.0-gtk3-dev,
+ base-files (<< 10) | libwxgtk-webview3.2-dev | libwxgtk-webview3.0-gtk3-dev,
  libwxsvg-dev | base-files (<< 11),
- base-files (>=12) | libwxgtk3.0-gtk3-dev,
- base-files (>=12) | libwxgtk3.0-gtk3-0v5,
- base-files (>=12) | libwxgtk-webview3.0-gtk3-dev,
- base-files (<< 12) | libwxgtk3.2-dev,
- base-files (<< 12) | libwxgtk-webview3.2-dev,
- libcurl4-openssl-dev,
+ lsb-release,
  python3-pip,
  python3-setuptools,
  python3-wheel
@@ -25,7 +26,7 @@ Description: Packages needed to build opencpn on debian.
  using something like:
  .
  .   sudo apt install devscripts equivs
- .   sudo mk-build-deps --install build-deps/control
+ .   sudo mk-build-deps --install ci/control
  .
  These packages are available in trusty+. The base-files
  fallback is for optional packages available in later releases.
